se agrega script de fotos cambiantes

--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -16,18 +16,6 @@
     <style>
         body 
         {
-            @media screen and (max-width: 768px) {
-        /* Estilos para pantallas más pequeñas (por ejemplo, teléfonos) */
-        }
-
-        @media screen and (min-width: 769px) and (max-width: 1024px) {
-        /* Estilos para tabletas */
-        }
-
-        @media screen and (min-width: 1025px) {
-        /* Estilos para pantallas más grandes (por ejemplo, computadoras de escritorio) */
-        }
-
             background-image: url('f1blancoyautos.jpg'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
             background-size: cover; /* Ajusta la imagen al tamaño de la ventana del navegador */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -107,6 +95,7 @@
             Tu navegador no admite la reproducción de video.
         </video>
     </div>
+    <!--contenedor de la gran mayoria de la informacion de la pagina-->
     <div class="contprincipal">
         <div class="textosinfo">
             <div class="puntos" id="puntos">
@@ -122,7 +111,7 @@
                     <p style="font-family: Bebas Neue, sans-serif;">PILOTOS DE LA FORMULA 1</p>    
                 </button>
                 <div class="pilotitos">
-                    <iframe src="pilotos/home_pilotos.html" frameborder="0" height="3550" width="1100"></iframe>
+                    <iframe src="pilotos/home_pilotos.html" frameborder="0" height="3550" width="900"></iframe>
                 </div>
             </div>
             <div class="fechas" id="fechas">
@@ -138,6 +127,7 @@
                 <button class="titulo">
                     <p style="font-family: Bebas Neue, sans-serif;">GRAN PRIX</p>
                 </button>
+                <!--referenciales de los circuitos-->
                 <div class="buscargp">
                     <a class="fancy" href="#sakhir">
                         <span class="top-key"></span>
@@ -290,6 +280,7 @@
                             <span class="bottom-key-2"></span>
                         </a>
                     </div>
+                <!--grandes premios con su informacion pertinente y su grafico del circuito-->
                 <div class="premio" id="sakhir">
                     <div class="titulopremio">
                         <button class="titulo">
