--- a/pages/deportes/f1/tabla de puntos/home_puntos.html
+++ b/pages/deportes/f1/tabla de puntos/home_puntos.html
@@ -14,6 +14,8 @@
             background: linear-gradient(to right, #8a3030, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
         table {
+            border-radius: 6px;
+            border: 8px solid #ff1e1e;
             font-family: Bebas Neue, sans-serif; /* Cambia "Arial" a la fuente que desees */
             font-size: 14px; /* Cambia el tamaño de fuente si es necesario */
         }
