--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -23,7 +23,7 @@
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href='../../estadisticas/home_estadisticas.html'">
-            <span>ESTADISTICAS</span>
+            <span>ESTADISTICA</span>
             <span></span>
         </button>
     </div>
