--- a/pages/deportes/tenis/noticias_A1.html
+++ b/pages/deportes/tenis/noticias_A1.html
@@ -38,7 +38,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENDARIO</span>
+            <span>CALENTARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
@@ -54,19 +54,25 @@
 		<h1>Deportes - Tenis - Noticias</h1>
 		</header>
 		<section>
-		  <p><a title="Noticias A1" href="../tenis/noticias_A1.html"><img src="articulos/a1.jpg" width="652" height="262" alt=""/><br>
-			Copa Davis: Báez pudo con Berankis y puso el 2-0 para Argentina</a>
-			</p>
-					  <p><a title="Noticias A2" href="../tenis/noticias_A2.html"><img src="articulos/a2.png" width="623" height="248" alt=""/><br>
-			Djokovic ganó sin problemas y así Serbia derrotó a España en la Copa Davis</a>
+		  <p><img src="articulos/a1.jpg" width="652" height="262" alt=""/><br>
+			  
+			  <h1>Copa Davis: Báez pudo con Berankis y puso el 2-0 para Argentina</h1>
+			  <br>
+			  Segundo acto positivo. En Buenos Aires, el local Sebastián Báez (singlista N°2, siendo 28° del mundo) <br>
+			pudo con el experimentado Ricardas Berankis (231°; ex-50°) en el segundo punto de la serie entre Argentina <br>
+			y Lituania por la Copa Davis y puso el 2-0.<br><br>
 			
-			</p>
-					  <p><a title="Noticias A3" href="../tenis/noticias_A3.html"><img src="articulos/A3.png" width="627" height="257" alt=""><br>
-					  <p>&nbsp;Djokovic: "Es la cancha más calurosa y húmeda en la que jugué bajo techo"</a> </p>
-<p><a title="Noticias A4" href="../tenis/noticias_A4.html"><img src="articulos/a4.png" width="625" height="244" alt=""/>    <br>
-Perdieron Jarry y el dobles y Chile cayó ante el local Italia en la Copa Davis </a></p>
-p><a title="Noticias A5" href="../tenis/noticias_A5.html"><img src="articulos/a5.png" width="625" height="244" alt=""/>    <br>
-    Garin tiene un debut difícil de medir en el ATP de Zhuhai </a></p>
+			Este choque corresponde al Grupo Mundial I y se disputa entre el sábado y el domingo en el tradicional polvo <br>
+			de ladrillo del Buenos Aires Lawn Tennis Club. Prensa AAT Báez llevaba las de ganar contra el experimentado Berankis,<br>
+			de 33 años, aún más con el apoyo de los fanáticos argentinos. Y lo demostró más allá de las dificultades para el 7-6 (6), 5-7 y 6-3 final.<br><br>
+			
+			En el primer turno, cabe recordar, Francisco Cerúndolo se había llevado la victoria sobre el lituano Vilius Gaubas por 6-1, 6-7 (6-8) y 6-2.<br>
+			Este año, cabe recordar, Báez logró tres de los cuatro títulos ATP de su carrera profesional. <br><br>
+			
+			Se impuso en Córdoba y después repitió con el plus de haber ganado dos torneos seguidos y cambiando de superficie.<br>
+			Argentina busca un lugar en las Qualifiers 2024, jugando en casa en la cancha central Guillermo Vilas del Buenos Aires Lawn Tennis Club,<br>
+			con Guillermo Coria, ex-N°3 mundial y finalista de Roland Garros 2004, como capitán.<br><br>
+	
 
 		</section>
 		<footer>
