--- a/pages/deportes/tenis/noticias_A3.html
+++ b/pages/deportes/tenis/noticias_A3.html
@@ -38,7 +38,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENDARIO</span>
+            <span>CALENTARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
@@ -54,19 +54,26 @@
 		<h1>Deportes - Tenis - Noticias</h1>
 		</header>
 		<section>
-		  <p><a title="Noticias A1" href="../tenis/noticias_A1.html"><img src="articulos/a1.jpg" width="652" height="262" alt=""/><br>
-			Copa Davis: Báez pudo con Berankis y puso el 2-0 para Argentina</a>
-			</p>
-					  <p><a title="Noticias A2" href="../tenis/noticias_A2.html"><img src="articulos/a2.png" width="623" height="248" alt=""/><br>
-			Djokovic ganó sin problemas y así Serbia derrotó a España en la Copa Davis</a>
+
+					  <p><img src="articulos/A3.png" width="627" height="257" alt=""><br>
+						 <br>
+			<h1>Djokovic: "Es la cancha más calurosa y húmeda en la que jugué bajo techo"</h1>
+						  <br>
+					  <p>Después de la consagración en el US Open, Novak Djokovic contó que la cancha de Valencia <br>
+						  de la Fonteta es la pista bajo techo más calurosa y húmeda en la <br>
+						  que jugó en su carrera, tras su victoria sobre <br>
+						  Alejandro Davidovich que confirmó la clasificación de Serbia para<br> 
+						  las Finales de Málaga de noviembre y la eliminación <br>
+						  de España en la Copa Davis.<br><br>
 			
+						  <br>“He oído a los fans pidiendo aire (la afición española gritaba ‘aire’ por el intenso calor)<br>
+						  especialmente en el primer set porque la temperatura no era normal en el estadio. He dicho a mi equipo<br>
+						  y a la organización si era posible poner el aire y en el segundo set han abierto las puertas y ha ido mejor”,<br> 
+						  explicó el serbio en rueda de prensa.<br>
+			
+			<br>
 			</p>
-					  <p><a title="Noticias A3" href="../tenis/noticias_A3.html"><img src="articulos/A3.png" width="627" height="257" alt=""><br>
-					  <p>&nbsp;Djokovic: "Es la cancha más calurosa y húmeda en la que jugué bajo techo"</a> </p>
-<p><a title="Noticias A4" href="../tenis/noticias_A4.html"><img src="articulos/a4.png" width="625" height="244" alt=""/>    <br>
-Perdieron Jarry y el dobles y Chile cayó ante el local Italia en la Copa Davis </a></p>
-p><a title="Noticias A5" href="../tenis/noticias_A5.html"><img src="articulos/a5.png" width="625" height="244" alt=""/>    <br>
-    Garin tiene un debut difícil de medir en el ATP de Zhuhai </a></p>
+
 
 		</section>
 		<footer>
