--- a/pages/deportes/tenis/noticias_A4.html
+++ b/pages/deportes/tenis/noticias_A4.html
@@ -38,7 +38,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENDARIO</span>
+            <span>CALENTARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
@@ -54,19 +54,30 @@
 		<h1>Deportes - Tenis - Noticias</h1>
 		</header>
 		<section>
-		  <p><a title="Noticias A1" href="../tenis/noticias_A1.html"><img src="articulos/a1.jpg" width="652" height="262" alt=""/><br>
-			Copa Davis: Báez pudo con Berankis y puso el 2-0 para Argentina</a>
-			</p>
-					  <p><a title="Noticias A2" href="../tenis/noticias_A2.html"><img src="articulos/a2.png" width="623" height="248" alt=""/><br>
-			Djokovic ganó sin problemas y así Serbia derrotó a España en la Copa Davis</a>
+	
+<p><img src="articulos/a4.png" width="625" height="244" alt=""/>
+    <br>
+<h1>Perdieron Jarry y el dobles y Chile cayó ante el local Italia en la Copa Davis </h1>
+	
+	No pudo ser para Chile. De visitante, en Bolonia, en cancha dura y bajo techo, <br>
+	el equipo dirigido por Nicolás Massú perdió 3-0 con Italia en busca del boleto  <br>
+	a las Finales de la Copa Davis a jugarse en noviembre en Málaga. Tras la caída de Cristian Garin, <br>
+	también fueron superados Nicolás Jarry y el dobles de Alejandro Tabilo y Tomás Barrios Vera. <br> <br>
 			
+			Lo llamativo de la serie de este viernes fue que los tres partidos fueron remontadas. <br>
+	Empezó ganando Garin y luego perdió con Matteo Arnaldi, que sorprendió a todos en el US Open.<br>
+	En el segundo punto, Jarry cayó por 3-6, 7-5 y 6-4 a manos de Lorenzo Sonego y allí la eliminatoria quedó <br>
+	en manos de los anfitriones. Pero era valioso el punto del dobles para la definición del grupo con los otros rivales,<br>
+	por los sets ganados y cedidos.<br><br>
+	
+	El propio Sonego volvió a pisar la cancha dura de Bolonia en compañía de otro Lorenzo, Musetti, sustituto de Andrea Vavassori,<br>
+	inicialmente fijado para el dobles, y los locales vencieron a Tabilo y Barrios por 6-7(3), 6-3 y 7-6 (2) en un duro e intenso choque de dos horas y media.<br><br>
+	
+	Así, Italia superó a Chile en el Grupo A de la Copa Davis que se disputa en el Unipol Arena de Bolonia. <br>
+	El resultado deja abierta la clasificación para las Finales entre los ocho mejores del año en Málaga, en España, del 21 al 26 de noviembre.<br><br>
+	
+	
 			</p>
-					  <p><a title="Noticias A3" href="../tenis/noticias_A3.html"><img src="articulos/A3.png" width="627" height="257" alt=""><br>
-					  <p>&nbsp;Djokovic: "Es la cancha más calurosa y húmeda en la que jugué bajo techo"</a> </p>
-<p><a title="Noticias A4" href="../tenis/noticias_A4.html"><img src="articulos/a4.png" width="625" height="244" alt=""/>    <br>
-Perdieron Jarry y el dobles y Chile cayó ante el local Italia en la Copa Davis </a></p>
-p><a title="Noticias A5" href="../tenis/noticias_A5.html"><img src="articulos/a5.png" width="625" height="244" alt=""/>    <br>
-    Garin tiene un debut difícil de medir en el ATP de Zhuhai </a></p>
 
 		</section>
 		<footer>
