--- a/pages/deportes/tenis/noticias_A5.html
+++ b/pages/deportes/tenis/noticias_A5.html
@@ -38,7 +38,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENDARIO</span>
+            <span>CALENTARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
@@ -54,19 +54,21 @@
 		<h1>Deportes - Tenis - Noticias</h1>
 		</header>
 		<section>
-		  <p><a title="Noticias A1" href="../tenis/noticias_A1.html"><img src="articulos/a1.jpg" width="652" height="262" alt=""/><br>
-			Copa Davis: Báez pudo con Berankis y puso el 2-0 para Argentina</a>
-			</p>
-					  <p><a title="Noticias A2" href="../tenis/noticias_A2.html"><img src="articulos/a2.png" width="623" height="248" alt=""/><br>
-			Djokovic ganó sin problemas y así Serbia derrotó a España en la Copa Davis</a>
+	
+<p><img src="articulos/A5.png" width="625" height="244" alt=""/>
+    <br>
+<h1>Garin tiene un debut difícil de medir en el ATP de Zhuhai </h1>
+	
+	Cristian Garin (102° del ranking ATP) ya dejó atrás la amarga y dolorosa eliminación de Chile en el Grupo A de las finales de Copa Davis.<br>
+	Viajó a China para disputar el ATP 250 de Zhuhai, donde debutará ante el joven local Yi Zhou (903°), de 18 años, por el inicio de la gira por Asia.<br>
+			<br>
 			
+	Zhou es una de las grandes promesas del tenis chino y en Zhuhai tendrá su debut en un torneo ATP, por lo que asoma como un estreno más que accesible para el chileno.<br><br>
+	
+	En caso de hacer valer su experiencia y ranking, Garin enfrentará en octavos de final al alemán Jan-Lennard Struff (23°), quien quedó libre en primera fase por su condición de tercer cabeza de serie.<br><br>
+	
+	
 			</p>
-					  <p><a title="Noticias A3" href="../tenis/noticias_A3.html"><img src="articulos/A3.png" width="627" height="257" alt=""><br>
-					  <p>&nbsp;Djokovic: "Es la cancha más calurosa y húmeda en la que jugué bajo techo"</a> </p>
-<p><a title="Noticias A4" href="../tenis/noticias_A4.html"><img src="articulos/a4.png" width="625" height="244" alt=""/>    <br>
-Perdieron Jarry y el dobles y Chile cayó ante el local Italia en la Copa Davis </a></p>
-p><a title="Noticias A5" href="../tenis/noticias_A5.html"><img src="articulos/a5.png" width="625" height="244" alt=""/>    <br>
-    Garin tiene un debut difícil de medir en el ATP de Zhuhai </a></p>
 
 		</section>
 		<footer>
