--- a/pages/deportes/tenis/temporada.html
+++ b/pages/deportes/tenis/temporada.html
@@ -38,7 +38,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENDARIO</span>
+            <span>CALENTARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
@@ -50,25 +50,13 @@
             <span></span>
         </button>
     </div>
-<header>
-		<h1>Deportes - Tenis - Noticias</h1>
+		<header>
+		<h1>Temporada Tenis 2023 - 2024</h1>
 		</header>
 		<section>
-		  <p><a title="Noticias A1" href="../tenis/noticias_A1.html"><img src="articulos/a1.jpg" width="652" height="262" alt=""/><br>
-			Copa Davis: Báez pudo con Berankis y puso el 2-0 para Argentina</a>
-			</p>
-					  <p><a title="Noticias A2" href="../tenis/noticias_A2.html"><img src="articulos/a2.png" width="623" height="248" alt=""/><br>
-			Djokovic ganó sin problemas y así Serbia derrotó a España en la Copa Davis</a>
+		  <p><img src="temporada_ganadores.png" width="990" height="1000" alt=""/>&nbsp;</p>
 			
-			</p>
-					  <p><a title="Noticias A3" href="../tenis/noticias_A3.html"><img src="articulos/A3.png" width="627" height="257" alt=""><br>
-					  <p>&nbsp;Djokovic: "Es la cancha más calurosa y húmeda en la que jugué bajo techo"</a> </p>
-<p><a title="Noticias A4" href="../tenis/noticias_A4.html"><img src="articulos/a4.png" width="625" height="244" alt=""/>    <br>
-Perdieron Jarry y el dobles y Chile cayó ante el local Italia en la Copa Davis </a></p>
-p><a title="Noticias A5" href="../tenis/noticias_A5.html"><img src="articulos/a5.png" width="625" height="244" alt=""/>    <br>
-    Garin tiene un debut difícil de medir en el ATP de Zhuhai </a></p>
-
-		</section>
+</section>
 		<footer>
 			
 		</footer>
