cambios en la pag

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="home_voley.css">
 </head>
 <body>
+    <header>
+        <img src="./imagenes/logo voley.jpg" alt="" class="logo_header">
+        <h1 class="titulo">DEPOLOGS - VOLEY</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Jugadores</a></li>
+            <li><a href="#">Partidos</a></li>
+            <li></li>
+        </ul>
+    </nav>
+
     <script src="./home_voley.js"></script>
 </body>
 </html>
