cambio en el tit

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -19,6 +19,7 @@
             <li></li>
         </ul>
     </nav>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus facilis accusantium doloremque? Iste ipsum quo fugit deleniti esse. Numquam architecto laboriosam deserunt animi, eaque fugit ex eum temporibus reprehenderit est.</p>
 
     <script src="./home_voley.js"></script>
 </body>
