--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header>
-        <img src="./imagenes/logo voley.jpg" alt="" class="logo_header">
-        <h1 class="titulo">DEPOLOGS - VOLEY</h1>
+        <div class="logo_header">
+            <img src="./imagenes/logo voley.jpg" alt="" >
+        </div>
+        <div class="titulo">
+            <h1 >DEPOLOGS - VOLEY</h1>
+        </div>    
     </header>
     <nav>
         <ul>
