--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -11,7 +11,7 @@
     <div class="encabezado">
         <div class="logo_voley">
             <img src="./imagenes/logo voley.jpg" alt="Logo Voley">
-            <h1>Depologs - Voley</h1>
+            <h1 class="titulo">Depologs - Voley</h1>
             <div class="boton_nav">
                 <nav>
                     <ul>
