--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -11,11 +11,11 @@
     <h1>DEPOLOGS - FUTBOL</h1>
     <div class="botonera">
         <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
-            <span>ATRAS</span>
+            <span>INICIO</span>
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-            <span>DEPORTES</span>
+            <span>ESTADISTICAS</span>
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href='../../biblioteca_videos/home_videos.html'">
@@ -23,7 +23,7 @@
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href='../../estadisticas/home_estadisticas.html'">
-            <span>ESTADISTICA</span>
+            <span>+ DEPORTES</span>
             <span></span>
         </button>
     </div>
