--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="imagen/png" href="./images/home_favicon.png"/>
 </head>
 <body>
-    <h1>DEPOLOGS - FUTBOL</h1>
+    <img class="logo" src="./images/logo.PNG">
     <div class="botonera">
         <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
             <span>INICIO</span>
@@ -48,9 +48,9 @@
   </div>
 
   <div class="principal-1">
-    <img src="./images/escudos_ligas/libertadores.png" alt="copa-libertadores">
-    <img src="./images/escudos_ligas/LIGAPROFESIONALDEFUTBOL/argentina2.png" alt="liga-argentina">
-    <img src="./images/escudos_ligas/CONMEBOL/conmebol.png" alt="eliminatorias-sudamericanas">
+    <a href="./eliminatorias_sudamericanas/eliminatorias_sudamericanas.html"><img src="./images/escudos_ligas/CONMEBOL/conmebol.png" alt="eliminatorias_sudamericanas"></a>
+    <a href="./copa_libertadores/copa_libertadores.html"><img src="./images/escudos_ligas/libertadores.png" alt="copa-libertadores"></a>
+    <a href="./liga_argentina/liga_argentina.html"><img src="./images/escudos_ligas/LIGAPROFESIONALDEFUTBOL/argentina2.png" alt="liga-argentina"></a>
   </div>
 
   <div class="principal-2">
@@ -69,7 +69,9 @@
             <img src="./images/escudos_ligas/PREMIERLEAGUE/premier.png" alt="Noticia 1">
             <p>La Premier League, también conocida en Inglaterra como The Premiership, es la máxima categoría del sistema de ligas de fútbol de Inglaterra. Comenzó a disputarse en la temporada 1992-93. 
                 En ella pueden también participar, por motivos históricos, aquellos clubes galeses que lo deseen, siempre que hayan competido ininterrumpidamente en el sistema de fútbol 
-                federado inglés desde, al menos, el 30 de junio de 1992. Este es el caso del Swansea City y del Cardiff City, clubes radicados en Gales participantes de la liga y que han llegado a representar a Inglaterra en competiciones europeas.</p>
+                federado inglés desde, al menos, el 30 de junio de 1992. Este es el caso del Swansea City y del Cardiff City, clubes radicados en Gales participantes de la liga y que han llegado a representar a Inglaterra en competiciones europeas.
+                Establecida la Primera División de Inglaterra denominada como The Football League en 1888 bajo amparo de The Football Association, se convirtió en la «primera liga de fútbol en el mundo». Se fusionó en 1892 con la Football Alliance para conformar el primer 
+                sistema de divisiones, y pasándose a denominar la principal categoría como Football League First Division.</p>
         </div>
 
     </div>
@@ -298,10 +300,13 @@
     <div class="noticias">
         <div class="noticia grande">
             <h2>COMENZO LA TEMPORADA 2023 -2024</h2>
-            <img src="./images/escudos_ligas/PREMIERLEAGUE/premier.png" alt="Noticia 1">
-            <p>La Premier League, también conocida en Inglaterra como The Premiership, es la máxima categoría del sistema de ligas de fútbol de Inglaterra. Comenzó a disputarse en la temporada 1992-93. 
-                En ella pueden también participar, por motivos históricos, aquellos clubes galeses que lo deseen, siempre que hayan competido ininterrumpidamente en el sistema de fútbol 
-                federado inglés desde, al menos, el 30 de junio de 1992. Este es el caso del Swansea City y del Cardiff City, clubes radicados en Gales participantes de la liga y que han llegado a representar a Inglaterra en competiciones europeas.</p>
+            <img src="./images/escudos_ligas/BUNDESLIGA/alemania.png" alt="Noticia 1">
+            <p>La Bundesliga es la competición entre los equipos de fútbol de la máxima categoría de Alemania. 
+                Se empezó a disputar en 1963, a partir de la unificación de los antiguos campeonatos locales llamados Oberligen. Junto a la Zweite Bundesliga y 
+                Dritte Bundesliga, forman las tres divisiones nacionales del fútbol profesional en Alemania.
+                Las temporadas se juegan de agosto a mayo, clasificándose todos los equipos de la Bundesliga a la DFB-Pokal. 
+                El ganador de la competición se clasifica para disputar la DFL-Supercup frente al campeón de la Copa.
+                A lo largo de su historia, doce clubes han resultado campeones de la Bundesliga, siendo el más laureado con 33 títulos el F. C. Bayern de Múnich, seguido del Nuremberg (9), Borussia Dortmund (8), Schalke 04 (7),Borussia Mönchengladbach (5), SV Werder Bremen (4), Hamburgo SV (3), VfB Stuttgart (3), F. C. Colonia (2), F. C. Kaiserslautern (2) y TSV Múnich, VfL Wolfsburgo, Eintracht Brunswick con un titulo.</p>
         </div>
 
     </div>
@@ -322,7 +327,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/arsenal.png" alt="Escudo Equipo 1"> Arsenal</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/augsburgo.png" alt="Escudo Equipo 1"> Augsburgo</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -332,7 +337,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/astonvilla.png" alt="Escudo Equipo 1"> Aston Villa</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/bayerleverkusen.png" alt="Escudo Equipo 1"> Bayern Leverkusen</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -342,7 +347,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/bournemouth.png" alt="Escudo Equipo 1"> Bournemouth</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/bayernmunchen.png" alt="Escudo Equipo 1"> Bayern Munich</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -352,7 +357,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/brentford.png" alt="Escudo Equipo 1"> Brentford</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/bmonchengladbach.png" alt="Escudo Equipo 1"> Borussia Mönchengladbach</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -362,7 +367,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/brighton.png" alt="Escudo Equipo 1"> Brighton</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/bochum.png" alt="Escudo Equipo 1"> VfL Bochum</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -372,7 +377,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/burnley.png" alt="Escudo Equipo 1"> Burnley</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/borussiadortmund.png" alt="Escudo Equipo 1"> Borussia Dortmund</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -382,7 +387,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/chelsea.png" alt="Escudo Equipo 1"> Chelsea</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/darmstadt98​.png" alt="Escudo Equipo 1"> SV Darmstadt 98</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -392,7 +397,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/crystalpalace.png" alt="Escudo Equipo 1"> Crystal Palace</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/eintrachtfrankfurt.png" alt="Escudo Equipo 1"> Eintracht Frankfurt</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -402,7 +407,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/everton.png" alt="Escudo Equipo 1"> Everton</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/freiburg.png" alt="Escudo Equipo 1"> Freiburg</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -412,7 +417,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/fulham.png" alt="Escudo Equipo 1"> Fulham</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/heidenheim.png" alt="Escudo Equipo 1"> Heidenheim</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -422,7 +427,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/liverpool.png" alt="Escudo Equipo 1"> Liverpool</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/hoffenheim.png" alt="Escudo Equipo 1"> Hoffenheim</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -432,7 +437,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/luton_town.png" alt="Escudo Equipo 1"> Luton Town</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/koln.png" alt="Escudo Equipo 1"> Koln</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -442,7 +447,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/manchestercity.png" alt="Escudo Equipo 1"> Manchester City</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/mainz05.png" alt="Escudo Equipo 1"> 1. FSV Mainz 05</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -452,7 +457,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/manchesterunited.png" alt="Escudo Equipo 1"> Manchester United</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/rbleipzig.png" alt="Escudo Equipo 1"> RB Leipzig</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -462,7 +467,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/newcastle.png" alt="Escudo Equipo 1"> Newcastle</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/stuttgart.png" alt="Escudo Equipo 1"> Stuttgart</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -472,7 +477,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/nottingham_forest.png" alt="Escudo Equipo 1"> Nottingham Forest</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/unionberlin.png" alt="Escudo Equipo 1"> Union Berlin</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -482,7 +487,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/sheffield.png" alt="Escudo Equipo 1"> Sheffield</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/werderbremen.png" alt="Escudo Equipo 1"> Weder Bremen</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
@@ -492,27 +497,7 @@
                         <td>15</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/tottenham.png" alt="Escudo Equipo 1"> Tottenham</td>
-                        <td>15</td>
-                        <td>30</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>30</td>
-                        <td>15</td>
-                        <td>15</td>
-                    </tr>
-                    <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/westham.png" alt="Escudo Equipo 1"> Westham</td>
-                        <td>15</td>
-                        <td>30</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>30</td>
-                        <td>15</td>
-                        <td>15</td>
-                    </tr>
-                    <tr>
-                        <td><img src="./images/escudos_ligas/PREMIERLEAGUE/wolves.png" alt="Escudo Equipo 1"> Wolves</td>
+                        <td><img src="./images/escudos_ligas/BUNDESLIGA/wolfsburg.png" alt="Escudo Equipo 1"> Wolfsburg</td>
                         <td>15</td>
                         <td>30</td>
                         <td>15</td>
