--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -12,14 +12,23 @@
         <div class="logo_voley">
             <img src="./imagenes/logo voley.jpg" alt="Logo Voley">
             <h1 class="titulo">Depologs - Voley</h1>
-            <div class="boton_nav">
-                <nav>
-                    <ul>
-                        <li>Inicio</li>
-                        <li>Jugadores</li>
-                        <li>Partidos</li>
-                    </ul>
-                </nav>
+            <div class="botonera">
+                <button class="boton_animado" onclick="window.location.href = '../../home_pages.html'">
+                    <span>Inicio</span>
+                    <span></span>
+                </button>
+                <button class="boton_animado" onclick="window.location.href = '../home_deportes.html'">
+                    <span>Deportes</span>
+                    <span></span>
+                </button>
+                <button class="boton_animado" onclick="window.location.href='../../biblioteca_videos/home_videos.html'">
+                    <span>Biblioteca</span>
+                    <span></span>
+                </button>
+                <button class="boton_animado" onclick="window.location.href='../../estadisticas/home_estadisticas.html'">
+                    <span>Estadisticas</span>
+                    <span></span>
+                </button>
             </div>
         </div>
         
