--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -538,7 +538,15 @@
 
 
     <footer>
-
+             <div class="redes-sociales">
+                <p>Seguinos en:</p>
+                <a href="https://www.facebook.com/" class="icono-facebook"><img src="./images/redes-sociales/facebook.png" alt="Facebook"></a>
+                <a href="https://twitter.com/" class="icono-twitter"><img src="./images/redes-sociales/twitter.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/?hl=es-la" class="icono-instagram"><img src="./images/redes-sociales/instagram.png" alt="Instagram"></a>
+            </div>
+            <div class="derechos-reservados">
+                <p>&copy; DEPOLOGS. Todos los derechos reservados.</p>
+            </div>
     </footer>
     <script src="home_futbol.js"></script>
 </body>
