--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -53,6 +53,9 @@
     </section>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus facilis accusantium doloremque? Iste ipsum quo fugit deleniti esse. Numquam architecto laboriosam deserunt animi, eaque fugit ex eum temporibus reprehenderit est.</p>
 
+    <footer>
+        <p>&#169 Depologs</p>
+    </footer>
     <script src="./home_voley.js"></script>
 </body>
 </html>
